updating button styles

--- a/style.css
+++ b/style.css
@@ -69,3 +69,9 @@ body {
     font-size: 20px;
     transition: all .3s ease-in-out;
   }
+
+  .col-8{
+      background-color:lightblue;
+      border-radius: 5px;
+      margin: 10px;
+  }
