--- a/style.css
+++ b/style.css
@@ -70,9 +70,9 @@ body {
     transition: all .3s ease-in-out;
   }
 
-  .col-8{
+  /* .col-8{
       background-color:lightgrey;
       border-radius: 5px;
       margin: 2px;
-  }
+  } */
   
